update to AU core 0.4.0-preview

--- a/src/main/webapp/WEB-INF/templates/tmpl-home-welcome.html
+++ b/src/main/webapp/WEB-INF/templates/tmpl-home-welcome.html
@@ -3,7 +3,7 @@
 
 	<div th:fragment="banner" class="well" >
 		<script>
-			console.log('Hello 1')
+			console.log('Hello')
 			// Function to check if a file exists using AJAX
 			function fileExists(filePath, callback) {
 				var xhr = new XMLHttpRequest();
