--- a/src/main/webapp/WEB-INF/templates/tmpl-home-welcome.html
+++ b/src/main/webapp/WEB-INF/templates/tmpl-home-welcome.html
@@ -3,7 +3,6 @@
 
 	<div th:fragment="banner" class="well" >
 		<script>
-			console.log('Hello')
 			// Function to check if a file exists using AJAX
 			function fileExists(filePath, callback) {
 				var xhr = new XMLHttpRequest();
@@ -40,16 +39,30 @@
 		</script>
 		<div class="panel-body">
 			<div id="replacementWelcome">
+
 				<p>
-					This server provides a complete implementation of the FHIR Specification
-					using a 100% open source software stack.
+					Welcome to the AU Core IG, Customized HAPI FHIR Public Test Server (R4 FHIR) provided by Whitefox Cloud Consulting. 
+					This server is specifically tailored to the Australian Core Implementation Guide (AU Core IG) and is accessible using the FHIR REST API or HAPI client implementation.	
 				</p>
+
 				<p>
-					This server is built
-					from a number of modules of the
-					<a href="https://github.com/hapifhir/hapi-fhir/">HAPI FHIR</a>
-					project, which is a 100% open-source (Apache 2.0 Licensed) Java based
-					implementation of the FHIR specification.
+					<strong>Important Notice:</strong> This is a testing environment and not a production server. Do not store any sensitive or confidential information here. The server is regularly purged and reloaded with predefined test data to ensure a consistent testing environment. <strong>Please note that preloaded test data cannot be deleted.</strong>
+				</p>
+				
+				<p>
+					<strong>About This Server:</strong> This server offers a full implementation of the FHIR Specification (AU Core IG) using a completely open-source software stack. It is constructed from various modules of the HAPI FHIR project, a Java-based implementation of the FHIR specification, licensed under Apache 2.0.
+				</p>
+				
+				<p>
+					<strong>Feedback and Support:</strong> We value your feedback and suggestions. If you have any thoughts, suggestions, or issues to report, please contact us at <a href="mailto:hello@whitefox.cloud">hello@whitefox.cloud</a>.
+				</p>
+				
+				<p>
+					<strong>Further Information:</strong> For a comprehensive introduction to this server as a reference implementation, please refer to the <a href="https://www.whitefox.cloud/articles/from-concept-to-implementation.html">article</a> on Whitefox.cloud website [link to the article].
+				</p>
+				
+				<p>
+					<strong>Source Code:</strong> The source code for this server is available on the Whitefox GitHub repository. You can use it locally or customize it to meet your specific needs. Visit our GitHub repository at [link to GitHub repository].
 				</p>
 			</div>
 		</div>
