--- a/src/main/webapp/WEB-INF/templates/tmpl-home-welcome.html
+++ b/src/main/webapp/WEB-INF/templates/tmpl-home-welcome.html
@@ -54,7 +54,7 @@
 				</p>
 				
 				<p>
-					<strong>Feedback and Support:</strong> We value your feedback and suggestions. If you have any thoughts, suggestions, or issues to report, please contact us at <a href="mailto:hello@whitefox.cloud">hello@whitefox.cloud</a>.
+					<strong>Feedback and Support:</strong> We value your feedback and suggestions. If you have any thoughts, suggestions, or issues to report, please contact us at <a href="mailto:fhir@whitefox.cloud">fhir@whitefox.cloud</a>.
 				</p>
 				
 				<p>
@@ -62,7 +62,7 @@
 				</p>
 				
 				<p>
-					<strong>Source Code:</strong> The source code for this server is available on the Whitefox GitHub repository. You can use it locally or customize it to meet your specific needs. Visit our GitHub repository at [link to GitHub repository].
+					<strong>Source Code:</strong> The source code for this server is available on the Whitefox GitHub repository. You can use it locally or customize it to meet your specific needs. Visit our <a href="https://github.com/whitefoxcloud/hapi-fhir-jpaserver-au">GitHub repository</a>.
 				</p>
 			</div>
 		</div>
