--- a/src/main/webapp/WEB-INF/templates/tmpl-banner.html
+++ b/src/main/webapp/WEB-INF/templates/tmpl-banner.html
@@ -12,6 +12,8 @@
 
     <script>
 
+        document.title = "Whitefox Test FHIR Server";
+
         const liElement = document.querySelector('.nav-item.dropdown');
         if (liElement) {
             liElement.remove();
