update AU-core version in UI

--- a/src/main/webapp/WEB-INF/templates/home.html
+++ b/src/main/webapp/WEB-INF/templates/home.html
@@ -41,7 +41,7 @@
 								<tr th:if="${!#strings.isEmpty(conf.software.name)} or ${!#strings.isEmpty(conf.software.version)}">
 									<td>Profile</td>
 									<td>
-									AU Core v0.4.0-preview	
+									AU Core v1.0.0-ballot
 									</td>
 								</tr>
                                                                 <tr><td>Preloaded Dataset</td><td><a href="https://github.com/whitefoxcloud/au-fhir-test-data">HL7 AU FHIR Test Data</a></td></tr>
