[Add] IPS version 2.0.0-ballot to the fhir server

--- a/src/main/webapp/WEB-INF/templates/tmpl-home-welcome.html
+++ b/src/main/webapp/WEB-INF/templates/tmpl-home-welcome.html
@@ -58,7 +58,7 @@
 				</p>
 				
 				<p>
-					<strong>Further Information:</strong> For a comprehensive introduction to this server as a reference implementation, please refer to the <a href="https://www.whitefox.cloud/articles/from-concept-to-implementation.html">article</a> on Whitefox.cloud website.
+					<strong>Further Information:</strong> For a detailed introduction to this server as a reference implementation, please refer to the <a href="https://www.whitefox.cloud/articles/from-concept-to-implementation.html">article</a> on Whitefox.cloud website. Additionally, you can explore more FHIR-related resources on our <a href="https://www.whitefox.cloud/services/fhir/">FHIR service page</a>.
 				</p>
 				
 				<p>
